[gd_scene load_steps=23 format=3 uid="uid://bpigsocwrxqni"]

[ext_resource type="PackedScene" uid="uid://dcl2qgr07bjau" path="res://pod/Pod11.glb" id="1_bqs3a"]
[ext_resource type="Shader" uid="uid://d0imqq8kwdp2l" path="res://shaders/pod_11.gdshader" id="2_ewli3"]
[ext_resource type="Script" uid="uid://1omvbe1b0y5i" path="res://scripts/pod.gd" id="2_mqcor"]
[ext_resource type="ArrayMesh" uid="uid://dw7pqqqln26we" path="res://assets/resources/new_array_mesh2.tres" id="3_75itj"]
[ext_resource type="FastNoiseLite" uid="uid://cnve4sjd8v7w3" path="res://assets/resources/new_fast_noise_lite1.tres" id="4_oi6qu"]
[ext_resource type="Shader" uid="uid://ngccs62tl7ao" path="res://shaders/pod_12.gdshader" id="5_6mros"]
[ext_resource type="AudioStream" uid="uid://d8y113mxbxv3" path="res://assets/music/sfx/underwaterambience-181406.mp3" id="6_kpuav"]
[ext_resource type="PackedScene" uid="uid://c3k66yc2cce0o" path="res://assets/meshes/scifi_button.glb" id="8_u801d"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_gv60m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_afc1q"]
render_priority = 1
shader = ExtResource("2_ewli3")
shader_parameter/noise_scale = 0.1
shader_parameter/animation_speed = 0.5
shader_parameter/transparency_strength = 0.0
shader_parameter/color = Color(0.0563916, 0.187625, 0.0609194, 1)
shader_parameter/wobble_strength = 0.008
shader_parameter/wobble_speed = 0.03
shader_parameter/wobble_scale = 2.535
shader_parameter/rotation_speed = 1.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_gv60m")

[sub_resource type="SphereMesh" id="SphereMesh_pjfdm"]
material = SubResource("ShaderMaterial_afc1q")
radial_segments = 256
rings = 128

[sub_resource type="Shader" id="Shader_afc1q"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back;

// Uniforms for controlling the shader
uniform float noise_scale : hint_range(0.1, 90.0) = 50.0; // Controls noise detail
uniform float animation_speed : hint_range(0.0, 2.0) = 0.5; // Controls animation speed
uniform float transparency_strength : hint_range(0.0, 1.0) = 1.0; // Controls max transparency
uniform vec3 color : source_color = vec3(1.0, 1.0, 1.0); // Base color of the sphere
uniform float wobble_strength : hint_range(0.0, 0.5) = 0.1; // Controls wobble intensity
uniform float wobble_speed : hint_range(0.0, 2.0) = 0.1; // Controls wobble animation speed
uniform float wobble_scale : hint_range(0.1, 10.0) = 3.0; // Controls wobble noise detail
uniform sampler2D noise_texture : hint_default_black; // FastNoiseLite texture

void vertex() {
    // Use vertex position and time to compute UV for wobble
    vec2 wobble_uv = VERTEX.xz * wobble_scale + vec2(TIME * wobble_speed, TIME * wobble_speed * 0.5);

    // Sample noise texture for wobble
    float wobble = texture(noise_texture, wobble_uv).r;

    // Displace vertex along its normal based on noise
    VERTEX += NORMAL * wobble * wobble_strength;
}

void fragment() {
    // Get UV coordinates and animate them with TIME
    vec2 uv = UV * noise_scale;
    uv += vec2(TIME * animation_speed, TIME * animation_speed * 0.5);

    // Sample noise texture
    float n = texture(noise_texture, uv).r;

    // Map noise to transparency (darker = more transparent)
    float alpha = 1.0 - n * transparency_strength;

    // Set albedo (color) and transparency
    ALBEDO = color;
    ALPHA = clamp(alpha, 0.0, 1.0);
}"

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_75itj"]
invert = true
in_3d_space = true
generate_mipmaps = false
seamless = true
seamless_blend_skirt = 1.0
noise = ExtResource("4_oi6qu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gv60m"]
render_priority = 2
shader = SubResource("Shader_afc1q")
shader_parameter/noise_scale = 19.504
shader_parameter/animation_speed = 0.013
shader_parameter/transparency_strength = 0.801
shader_parameter/color = Color(0.108357, 0.156734, 0, 1)
shader_parameter/wobble_strength = 0.079
shader_parameter/wobble_speed = 0.103
shader_parameter/wobble_scale = 2.97
shader_parameter/noise_texture = SubResource("NoiseTexture2D_75itj")

[sub_resource type="SphereMesh" id="SphereMesh_oi6qu"]
material = SubResource("ShaderMaterial_gv60m")
radial_segments = 256
rings = 128

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oi6qu"]
render_priority = 0
shader = ExtResource("5_6mros")
shader_parameter/sphere_color = Color(0, 0, 0, 0)
shader_parameter/wave_amplitude = 0.006
shader_parameter/wave_frequency = 19.397
shader_parameter/wave_speed = 3.618
shader_parameter/chroma_amount = 1.0
shader_parameter/stars_enabled = true
shader_parameter/star_field_scale = 4.377
shader_parameter/star_size = 0.008
shader_parameter/star_intensity = 1.0
shader_parameter/star_axis_speed = 0.051
shader_parameter/star_move_mode = 1

[sub_resource type="SphereMesh" id="SphereMesh_4yr0o"]
material = SubResource("ShaderMaterial_oi6qu")
radial_segments = 256
rings = 128

[sub_resource type="BoxShape3D" id="BoxShape3D_startbutton"]
size = Vector3(0.61438, 0.323242, 0.349561)

[sub_resource type="BoxShape3D" id="BoxShape3D_nslut"]
size = Vector3(1.60648, 1.39926, 0.844653)

[sub_resource type="QuadMesh" id="QuadMesh_health"]
size = Vector2(2, 0.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_health"]
viewport_path = NodePath("PodHealthViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_health"]
albedo_texture = SubResource("ViewportTexture_health")
emission_enabled = true
emission_texture = SubResource("ViewportTexture_health")
clearcoat_enabled = true
clearcoat_roughness = 0.61

[node name="Pod11" instance=ExtResource("1_bqs3a")]
transform = Transform3D(1.055, 0, 0, 0, 1.088, 0, 0, 0, 1.01486, 0, 0, 0)
script = ExtResource("2_mqcor")

[node name="Shader" type="MeshInstance3D" parent="." index="0"]
transform = Transform3D(8.8, 0, 0, 0, 8.8, 0, 0, 0, 8.8, -0.0223885, 2.63746, 0.0129004)
mesh = SubResource("SphereMesh_pjfdm")
skeleton = NodePath("")

[node name="ShaderInner" type="MeshInstance3D" parent="." index="1"]
transform = Transform3D(7.5, 0, 0, 0, 7.5, 0, 0, 0, 7.5, 0, 2.7109, 0)
mesh = SubResource("SphereMesh_oi6qu")
skeleton = NodePath("")

[node name="ShaderInnerner" type="MeshInstance3D" parent="." index="2"]
transform = Transform3D(6.8, 0, 0, 0, 6.8, 0, 0, 0, 6.8, 0, 2.7109, 0)
mesh = SubResource("SphereMesh_oi6qu")
skeleton = NodePath("")

[node name="cool" type="MeshInstance3D" parent="." index="3"]
transform = Transform3D(9, 0, 0, 0, 9, 0, 0, 0, 9, 0, 2.656, 0)
mesh = SubResource("SphereMesh_4yr0o")
skeleton = NodePath("")

[node name="Glass" parent="." index="4"]
mesh = ExtResource("3_75itj")

[node name="Ambience" type="AudioStreamPlayer3D" parent="." index="65"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.57977, 0)
stream = ExtResource("6_kpuav")
pitch_scale = 0.74
autoplay = true
parameters/looping = true

[node name="StartButton3D" type="StaticBody3D" parent="." index="66" groups=["start_button"]]
transform = Transform3D(0.998824, 0, 0.0485011, 0, 1, 0, -0.0485011, 0, 0.998824, 5.60902, 1.52134, 2.81491)

[node name="Sketchfab_Scene" parent="StartButton3D" index="0" instance=ExtResource("8_u801d")]
transform = Transform3D(2.98023e-08, 0, 1, 0, 1, 0, -1, 0, 1.49012e-08, 0.258228, -1.13227, -0.330772)

[node name="Object_9" parent="StartButton3D/Sketchfab_Scene/Sketchfab_model/5c52d278dd394752ad0f43f6b0fcd2db_fbx/Object_2/RootNode/switch_armature/Object_6/Skeleton3D" index="0"]
transform = Transform3D(0.877957, 0, 0, 0, 0.907227, 0, 0, 0, 0.757427, -0.403864, 3.70856e-24, 0.0350263)

[node name="ButtonCollision" type="CollisionShape3D" parent="StartButton3D" index="1"]
transform = Transform3D(0.67599, -0.736912, 0, 0.736913, 0.675989, 0, -2.83122e-07, 0, 1, 0.508296, 0.0780774, 0.0535704)
shape = SubResource("BoxShape3D_startbutton")

[node name="ButtonCollision2" type="CollisionShape3D" parent="StartButton3D" index="2"]
transform = Transform3D(-0.043079, -0.999072, 0, 0.999073, -0.0430788, 0, -2.6566e-07, 0, 1, 0.219198, -0.375842, 0.0750756)
shape = SubResource("BoxShape3D_nslut")

[node name="PodHealthViewport" type="SubViewport" parent="." index="67"]
size = Vector2i(400, 100)
render_target_update_mode = 4

[node name="PodHealthUI" type="Control" parent="PodHealthViewport" index="0"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBackground" type="ColorRect" parent="PodHealthViewport/PodHealthUI" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="HealthLabel" type="Label" parent="PodHealthViewport/PodHealthUI" index="1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 30.0
grow_horizontal = 2
text = "POD INTEGRITY"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="PodHealthViewport/PodHealthUI" index="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -10.0
offset_right = 150.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="HealthText" type="Label" parent="PodHealthViewport/PodHealthUI" index="3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
text = "100%"
horizontal_alignment = 1

[node name="PodHealthDisplay" type="MeshInstance3D" parent="." index="68"]
transform = Transform3D(0.216633, 0.00322463, 0.976248, 0.0355611, 0.999304, -0.011192, -0.975605, 0.037141, 0.216368, 3.74532, 2.93016, -3.8771)
cast_shadow = 0
mesh = SubResource("QuadMesh_health")
surface_material_override/0 = SubResource("StandardMaterial3D_health")

[editable path="StartButton3D/Sketchfab_Scene"]
